Added and Offset cards

--- a/ssfp.html
+++ b/ssfp.html
@@ -15,6 +15,7 @@
         ElevenFifty Luxury Cars
         </h1>
     </header>
+    <div id="main-container">
     <img src="Assets/luxury_cars.jpg" width="700px" height="350px">
     <section id="Brands & nav">
         <ul>
@@ -23,11 +24,13 @@
             <li>Service Department</li>
             <li>&#8801</li>
         </ul>
-        <div class="card1"></div>
-        <div class="card2"></div>
-        <div class="card3"></div>
-        <div class="card4"></div>
-        <div class="card5"></div>
+        <div id="cards-section">
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        </div>
         <div id="Search Area">
             <form>
                 <input type="text"><br><br>
@@ -37,6 +40,6 @@
             </form>
         </div>
     </section>
-    
+    </div>
 </body>
 </html>
