--- a/ssfp.html
+++ b/ssfp.html
@@ -25,11 +25,21 @@
             <li>&#8801</li>
         </ul>
         <div id="cards-section">
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
+        <div class="card">
+            <img src="Assets/PORSCHE.jpg" width="300px" height="200px">
+        </div>
+        <div class="card">
+            <img src="Assets/new-flying-spur-.jpg" width="300px" height="200px">
+        </div>
+        <div class="card">
+            <img src="Assets/2021_Rolls-Royce_Ghost_3.jpg" width="300px" height="200px">
+        </div>
+        <div class="card">
+            <img src="Assets/jaguar_ftype_100.jpg" width="300px" height="200px">
+        </div>
+        <div class="card">
+            <img src="Assets/2020-bmw-m8.jpg" width="300px" height="200px">
+        </div>
         </div>
         <div id="Search Area">
             <form>
